[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/FV510-Warrior/Warrior.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/FV510-Warrior/EnnemyWarrior.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

radius = 42.1746

[node name="EnnemyWarrior" groups=[
"ennemy",
] instance=ExtResource( 1 )]

script = ExtResource( 2 )
max_health = 7
detect_radius = 40

[node name="Main_Tank" parent="." index="2"]

_sections_unfolded = [ "Geometry", "LOD", "Transform", "material" ]

[node name="DetectionArea" type="Area" parent="." index="6"]

editor/display_folded = true
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea" index="0"]

transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]

[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]


